<resources>
    <string name="app_name">newmadproject</string>
    <string name="ordereditsuccessmessage">Your order details has been edited successfully.</string>
    <string name="okbutton">OK</string>
    <string name="orderdeletesuccessfulmessage">Your order has been cancelled successfully.</string>
    <string name="calculate">Calculate Distance</string>
    <string name="restaurentcity">Restaurent City</string>
    <string name="calc">Calculate</string>
    <string name="destination">Destination City</string>
    <string name="distance">Distance</string>
    <string name="enterrestaurent">Enter Restaurent City</string>
    <string name="orderdetails">Order Details</string>
    <string name="orderid">Order ID</string>
    <string name="customername">Customer Name</string>
    <string name="email">Email</string>
    <string name="contactnumber">Contact Number</string>
    <string name="address">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="date">Date</string>
    <string name="items">Items</string>
    <string name="totalprice">Total Price</string>
    <string name="time">Time</string>
    <string name="deliverystatus">Delivery Status</string>
    <string name="showorderid">#1284</string>
    <string name="showcustomername">Asha Wanigarathne</string>
    <string name="showemail">ashawanigarathne123@gmail.com</string>
    <string name="showcontactnumber">0702546943</string>
    <string name="showaddress">17, Minuwangoda Road, Ja Ela.</string>
    <string name="showzipcode">11350</string>
    <string name="showdate">2022/08/17</string>
    <string name="showitems">Large Pizza x 1, Small Pan Pizza x 3, Small Pepsi x 1</string>
    <string name="showtotalprice">4700LKR</string>
    <string name="showtime">14:29PM</string>
    <string name="showdeliverystatus">Pending</string>
    <string name="changeorderwarningtxt">*You can only make changes within 15 minutes of placing the order.</string>
    <string name="editorder">Edit Order</string>
    <string name="cancelorder">Cancel Order</string>
    <string name="entercustomeremail">ashawanigarathne123@gmail.com</string>
    <string name="entercontactnumber">0702546949</string>
    <string name="enteraddress">17, Minuwangoda Road, Ja Ela.</string>
    <string name="enterzipcode">11350</string>
    <string name="saveorderchanges">Save Changes</string>
    <string name="deleteconfirmationmsg">Are you sure you want to cancel the order?</string>
    <string name="deleteorderyes">Yes</string>
    <string name="deleteorderno">no</string>
    <string name="cart">Cart</string>
    <string name="numberofcartitems">2</string>
    <string name="subtotal">Subtotal</string>
    <string name="totalpricelkr">1305LKR</string>
    <string name="cartsave">Save and Continue</string>
    <string name="previousorders">My Orders</string>
    <string name="dateoforder">2022/01/01 - 2022/09/18</string>
    <string name="setdate">Set</string>
    <string name="addorder">Go to Payment</string>
    <string name="addemail">Enter email</string>
    <string name="enternumberhere">Enter Contact Number</string>
    <string name="enterziphere">Enter Zip Code</string>
    <string name="enteraddresshere">Enter Address</string>
    <string name="invalid_number">Please enter a valid number</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="invalid_address">Please enter valid address</string>
    <string name="invalid_zip">Please enter valid zip</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cancelordernow">Cancel Order</string>
    <string name="showtprice">3000LKR</string>
    <string name="showitm">Large Pizza x 1, Large Peppi x 1</string>
    <string name="showdates">2022/10/30</string>
    <string name="tpricelkr">3000LKR</string>
    <string name="shownewitm">Large Pizza x 1, Large Coca Cola x 1</string>
</resources>