<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".previousorderspage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-209dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofour" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-240dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/vieworder" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-240dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/close" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:layout_marginStart="-122dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/setdate"
        android:textColor="#FBFBFB"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/ceraprobold"
        android:text="@string/previousorders"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="195dp"
        android:layout_height="26dp"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="212dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:inputType="textPersonName"
        android:text="@string/dateoforder"
        android:textColor="#838383"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="348dp"
        android:layout_height="548dp"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>