<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".distancecalculator">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-209dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logothree" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="355dp"
        android:layout_height="490dp"
        android:layout_marginStart="-376dp"
        android:layout_marginTop="208dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boxone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-370dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/ceraprobold"
        android:text="@string/calculate"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-260dp"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/restaurentcity"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-260dp"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/destination"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-227dp"
        android:layout_marginTop="530dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/distance"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="39dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="-240dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/calc" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginStart="-36dp"
        android:layout_marginTop="-240dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/close" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:layout_marginStart="-340dp"
        android:layout_marginTop="-120dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/roundbuttonwhile" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:layout_marginStart="-340dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/roundbuttonwhile" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:layout_marginStart="-340dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/roundbuttonwhile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:layout_marginStart="-249dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="@font/poppinsmedium"
        android:onClick="sendMessage"
        android:text="@string/calc"
        android:textColor="#FBFBFB"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/restName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="-417dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/cerapromedium"
        android:hint="Enter Restaurent City"
        android:inputType="textPersonName"
        android:textColor="#676767"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ctyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="-318dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/cerapromedium"
        android:hint="Enter Destination City"
        android:inputType="textPersonName"
        android:textColor="#676767"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/resultDistance"
        android:layout_width="297dp"
        android:layout_height="25dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="-118dp"
        android:fontFamily="@font/cerapromedium"
        android:textColor="#676767"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>